k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prueba-k8s
spec:
  rules:
  - host: pruebak8s.peperc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-prueba-k8s
            port:
              number: 80
